@@ -1,3 +1,15 @@
+2020-06-08  Chris Fleizach  <cfleizach@apple.com>
+
+        HAVE(ACCESSIBILITY_BUNDLES_PATH) is defined in terms of PLATFORM(IOS_FAMILY) but only checks the version of __IPHONE_OS_VERSION_MIN_REQUIRED
+        https://bugs.webkit.org/show_bug.cgi?id=212704
+        <rdar://problem/63931340>
+
+        Reviewed by Darin Adler.
+
+        Ensure that this works for all iOS familes.
+
+        * wtf/PlatformHave.h:
+
 2020-06-08  Per Arne Vollan  <pvollan@apple.com>
 
         [Cocoa] Adopt read-only mode for preferences in the WebContent process
